[package]
name = "newsbook-api"
version = "0.1.0"
authors = ["Joshua Byrd <phocks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
mongodb = "1.1.1"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
