[package]
name = "newsbook-api"
version = "0.1.0"
authors = ["Joshua Byrd <phocks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
couch_rs = "0.8"
serde_json = "1.0.62"
